artifacts/macos-x86_64-artifact/dojo.h

struct Policy;
struct Controller;
struct OrderBy;
struct Entity;
struct Transaction;
struct Struct;
struct Token;
struct TokenBalance;
typedef enum OrderDirection {
  Asc,
  Desc,
} OrderDirection;
typedef enum PaginationDirection {
  Forward,
  Backward,
} PaginationDirection;
typedef struct FieldElement {
  uint8_t data[32];
} FieldElement;
typedef struct CArrayFieldElement {
  struct FieldElement *data;
  uintptr_t data_len;
} CArrayFieldElement;
typedef struct CArrayController {
  struct Controller *data;
  uintptr_t data_len;
} CArrayController;
typedef enum COptionc_char_Tag {
  Somec_char,
  Nonec_char,
} COptionc_char_Tag;
typedef struct COptionc_char {
  COptionc_char_Tag tag;
  union {
    struct {
      const char *some;
    };
  };
} COptionc_char;
typedef enum COptionu32_Tag {
  Someu32,
  Noneu32,
} COptionu32_Tag;
typedef struct COptionu32 {
  COptionu32_Tag tag;
  union {
    struct {
      uint32_t some;
    };
  };
} COptionu32;
typedef struct CArrayOrderBy {
  struct OrderBy *data;
  uintptr_t data_len;
} CArrayOrderBy;
typedef struct Pagination {
  struct COptionc_char cursor;
  struct COptionu32 limit;
  enum PaginationDirection direction;
  struct CArrayOrderBy order_by;
} Pagination;
typedef struct CArrayEntity {
  struct Entity *data;
  uintptr_t data_len;
} CArrayEntity;
typedef struct PageEntity {
  struct CArrayEntity items;
  struct COptionc_char next_cursor;
} PageEntity;
typedef struct U256 {
  uint8_t data[32];
} U256;
typedef enum Primitive_Tag {
  I8,
  I16,
  I32,
  I64,
  I128,
  U8,
  U16,
  U32,
  U64,
  U128,
  U256_,
  Bool,
  Felt252,
  ClassHash,
  ContractAddress,
  EthAddress,
} Primitive_Tag;
typedef struct Primitive {
  Primitive_Tag tag;
  union {
    struct {
      int8_t i8;
    };
    struct {
      int16_t i16;
    };
    struct {
      int32_t i32;
    };
    struct {
      int64_t i64;
    };
    struct {
      uint8_t i128[16];
    };
    struct {
      uint8_t u8;
    };
    struct {
      uint16_t u16;
    };
    struct {
      uint32_t u32;
    };
    struct {
      uint64_t u64;
    };
    struct {
      uint8_t u128[16];
    };
    struct {
      struct U256 u256;
    };
    struct {
      bool bool_;
    };
    struct {
      struct FieldElement felt252;
    };
    struct {
      struct FieldElement class_hash;
    };
    struct {
      struct FieldElement contract_address;
    };
    struct {
      struct FieldElement eth_address;
    };
  };
} Primitive;
typedef struct CArrayTransaction {
  struct Transaction *data;
  uintptr_t data_len;
} CArrayTransaction;
typedef struct PageTransaction {
  struct CArrayTransaction items;
  struct COptionc_char next_cursor;
} PageTransaction;
typedef struct CArrayTransactionCall {
  struct TransactionCall *data;
  uintptr_t data_len;
} CArrayTransactionCall;
typedef struct Transaction {
  struct FieldElement transaction_hash;
  struct FieldElement sender_address;
  struct CArrayFieldElement calldata;
  struct FieldElement max_fee;
  struct CArrayFieldElement signature;
  struct FieldElement nonce;
  uint64_t block_number;
  const char *transaction_type;
  uint64_t block_timestamp;
  struct CArrayTransactionCall calls;
  struct CArrayFieldElement unique_models;
} Transaction;
typedef struct CArrayStruct {
  struct Struct *data;
  uintptr_t data_len;
} CArrayStruct;
typedef struct CArrayToken {
  struct Token *data;
  uintptr_t data_len;
} CArrayToken;
typedef struct PageToken {
  struct CArrayToken items;
  struct COptionc_char next_cursor;
} PageToken;
typedef struct COptionU256 {
  COptionU256_Tag tag;
  union {
    struct {
      struct U256 some;
    };
  };
} COptionU256;
typedef struct Token {
  struct FieldElement contract_address;
  struct COptionU256 token_id;
  const char *name;
  const char *symbol;
  uint8_t decimals;
  const char *metadata;
} Token;
typedef struct CArrayTokenBalance {
  struct TokenBalance *data;
  uintptr_t data_len;
} CArrayTokenBalance;
typedef struct PageTokenBalance {
  struct CArrayTokenBalance items;
  struct COptionc_char next_cursor;
} PageTokenBalance;
typedef struct TokenBalance {
  struct U256 balance;
  struct FieldElement account_address;
  struct FieldElement contract_address;
  struct COptionU256 token_id;
} TokenBalance;
typedef struct Policy {
  struct FieldElement target;
  const char *method;
  const char *description;
} Policy;
typedef struct Controller {
  struct FieldElement address;
  const char *username;
  uint64_t deployed_at_timestamp;
} Controller;
typedef struct OrderBy {
  const char *field;
  enum OrderDirection direction;
} OrderBy;
typedef struct Entity {
  struct FieldElement hashed_keys;
  struct CArrayStruct models;
} Entity;
typedef struct CArrayMember {
  struct Member *data;
  uintptr_t data_len;
} CArrayMember;
typedef struct Struct {
  const char *name;
  struct CArrayMember children;
} Struct;
/**
 * Gets account address
 *
 * # Parameters
 * * `account` - Pointer to Account
 *
 * # Returns
 * FieldElement containing the account address
 */
struct FieldElement account_address(struct Account *account);