Assets/Dojo/Runtime/Bindings/dojo.gen.cs


                    _items = new CArrayController();
                    _items.data_len = (UIntPtr)value.Length;
                    fixed (Controller* ptr = value)
                    {
                        _items.data = ptr;
                    }
                }
            }

            [FieldOffset(16)] // size = 16
            public COptionc_char next_cursor;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 32, Pack = 8)]
        public struct PageEntity
        {
            [FieldOffset(0)] // size = 16
            public CArrayEntity _items;

            public Span<Entity> items
            {
                get
                {
                    fixed (PageEntity* @this = &this)
                    {
                        var span = new Span<Entity>(@this->_items.data, (int)@this->_items.data_len);
                        return span;
                    }
                }

                set
                {

                    _items = new CArrayEntity();
                    _items.data_len = (UIntPtr)value.Length;
                    fixed (Entity* ptr = value)
                    {
                        _items.data = ptr;
                    }
                }
            }

            [FieldOffset(16)] // size = 16
            public COptionc_char next_cursor;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 32, Pack = 8)]
        public struct PageToken
        {
            [FieldOffset(0)] // size = 16
            public CArrayToken _items;

            public Span<Token> items
            {
                get
                {
                    fixed (PageToken* @this = &this)
                    {
                        var span = new Span<Token>(@this->_items.data, (int)@this->_items.data_len);
                        return span;
                    }
                }

                set
                {

                    _items = new CArrayToken();
                    _items.data_len = (UIntPtr)value.Length;
                    fixed (Token* ptr = value)
                    {
                        _items.data = ptr;
                    }
                }
            }

            [FieldOffset(16)] // size = 16
            public COptionc_char next_cursor;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 32, Pack = 8)]
        public struct PageTokenBalance
        {
            [FieldOffset(0)] // size = 16
            public CArrayTokenBalance _items;

            public Span<TokenBalance> items
            {
                get
                {
                    fixed (PageTokenBalance* @this = &this)
                    {
                        var span = new Span<TokenBalance>(@this->_items.data, (int)@this->_items.data_len);
                        return span;
                    }
                }

                set
                {

                    _items = new CArrayTokenBalance();
                    _items.data_len = (UIntPtr)value.Length;
                    fixed (TokenBalance* ptr = value)
                    {
                        _items.data = ptr;
                    }
                }
            }

            [FieldOffset(16)] // size = 16
            public COptionc_char next_cursor;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 32, Pack = 8)]
        public struct PageTokenContract
        {
            [FieldOffset(0)] // size = 16
            public CArrayTokenContract _items;

            public Span<TokenContract> items
            {
                get
                {
                    fixed (PageTokenContract* @this = &this)
                    {
                        var span = new Span<TokenContract>(@this->_items.data, (int)@this->_items.data_len);
                        return span;
                    }
                }

                set
                {

                    _items = new CArrayTokenContract();
                    _items.data_len = (UIntPtr)value.Length;
                    fixed (TokenContract* ptr = value)
                    {
                        _items.data = ptr;
                    }
                }
            }

            [FieldOffset(16)] // size = 16
            public COptionc_char next_cursor;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 32, Pack = 8)]
        public struct PageTransaction
        {
            [FieldOffset(0)] // size = 16
            public CArrayTransaction _items;

            public Span<Transaction> items
            {
                get
                {
                    fixed (PageTransaction* @this = &this)
                    {
                        var span = new Span<Transaction>(@this->_items.data, (int)@this->_items.data_len);
                        return span;
                    }
                }

                set
                {

                    _items = new CArrayTransaction();
                    _items.data_len = (UIntPtr)value.Length;
                    fixed (Transaction* ptr = value)
                    {
                        _items.data = ptr;
                    }
                }
            }

            [FieldOffset(16)] // size = 16
            public COptionc_char next_cursor;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 48, Pack = 8)]
        public struct Pagination
        {
            [FieldOffset(0)] // size = 16
            public COptionc_char cursor;

            [FieldOffset(16)] // size = 8
            public COptionu32 limit;

            [FieldOffset(24)] // size = 4
            public PaginationDirection direction;

            [FieldOffset(32)] // size = 16
            public CArrayOrderBy _order_by;

            public Span<OrderBy> order_by
            {
                get
                {
                    fixed (Pagination* @this = &this)
                    {
                        var span = new Span<OrderBy>(@this->_order_by.data, (int)@this->_order_by.data_len);
                        return span;
                    }
                }

                set
                {

                    _order_by = new CArrayOrderBy();
                    _order_by.data_len = (UIntPtr)value.Length;
                    fixed (OrderBy* ptr = value)
                    {
                        _order_by.data = ptr;
                    }
                }
            }

        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 48, Pack = 8)]
        public struct Policy
        {
            [FieldOffset(0)] // size = 32
            public FieldElement target;

            [FieldOffset(32)] // size = 8
            public CString method_;

            public string method
            {
                get
                {
                    return CString.ToString(method_);
                }
                set
                {
                    method_ = CString.FromString(value);
                }
            }

            [FieldOffset(40)] // size = 8
            public CString description_;

            public string description
            {
                get
                {
                    return CString.ToString(description_);
                }
                set
                {
                    description_ = CString.FromString(value);
                }
            }
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 40, Pack = 8)]
        public struct Primitive
        {
            [FieldOffset(0)] // size = 4
            public Primitive_Tag tag;

            [FieldOffset(8)] // size = 1
            public sbyte i8;

            [FieldOffset(8)] // size = 2
            public short i16;

            [FieldOffset(8)] // size = 4
            public int i32;

            [FieldOffset(8)] // size = 8
            public long i64;

            [FieldOffset(8)] // size = 16
            public fixed byte _i128[16]; // uint8_t[16]

            public Span<byte> i128
            {
                get
                {
                    fixed (Primitive* @this = &this)
                    {
                        var pointer = &@this->_i128[0];
                        var span = new Span<byte>(pointer, 16);
                        return span;
                    }
                }

                set
                {
                    fixed (Primitive* @this = &this)
                    {
                        var pointer = &@this->_i128[0];
                        var span = new Span<byte>(pointer, 16);
                        value.CopyTo(span);
                    }
                }
            }

            [FieldOffset(8)] // size = 1
            public byte u8;

            [FieldOffset(8)] // size = 2
            public ushort u16;

            [FieldOffset(8)] // size = 4
            public uint u32;

            [FieldOffset(8)] // size = 8
            public ulong u64;

            [FieldOffset(8)] // size = 16
            public fixed byte _u128[16]; // uint8_t[16]

            public Span<byte> u128
            {
                get
                {
                    fixed (Primitive* @this = &this)
                    {
                        var pointer = &@this->_u128[0];
                        var span = new Span<byte>(pointer, 16);
                        return span;
                    }
                }

                set
                {
                    fixed (Primitive* @this = &this)
                    {
                        var pointer = &@this->_u128[0];
                        var span = new Span<byte>(pointer, 16);
                        value.CopyTo(span);
                    }
                }
            }

            [FieldOffset(8)] // size = 32
            public U256 u256;

            [FieldOffset(8)] // size = 1
            public CBool bool_;

            [FieldOffset(8)] // size = 32
            public FieldElement felt252;

            [FieldOffset(8)] // size = 32
            public FieldElement class_hash;

            [FieldOffset(8)] // size = 32
            public FieldElement contract_address;

            [FieldOffset(8)] // size = 32
            public FieldElement eth_address;
        }

        [CNode(Kind = "Union")]
        [StructLayout(LayoutKind.Explicit, Size = 32, Pack = 8)]
        public struct Primitive_ANONYMOUS_FIELD1
        {
            [FieldOffset(0)] // size = 1
            public sbyte i8;

            [FieldOffset(0)] // size = 2
            public short i16;

            [FieldOffset(0)] // size = 4
            public int i32;

            [FieldOffset(0)] // size = 8
            public long i64;

            [FieldOffset(0)] // size = 16
            public fixed byte _i128[16]; // uint8_t[16]

            public Span<byte> i128
            {
                get
                {
                    fixed (Primitive_ANONYMOUS_FIELD1* @this = &this)
                    {
                        var pointer = &@this->_i128[0];
                        var span = new Span<byte>(pointer, 16);
                        return span;
                    }
                }

                set
                {
                    fixed (Primitive_ANONYMOUS_FIELD1* @this = &this)
                    {
                        var pointer = &@this->_i128[0];
                        var span = new Span<byte>(pointer, 16);
                        value.CopyTo(span);
                    }
                }
            }

            [FieldOffset(0)] // size = 1
            public byte u8;

            [FieldOffset(0)] // size = 2
            public ushort u16;

            [FieldOffset(0)] // size = 4
            public uint u32;
